force-app/main/default/objects/deal_details_TV__c/deal_details_TV__c.object-meta.xml
<CustomObject>
    <label>deal detail TV</label>
    <nameField>
        <label>deal details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>deal details TV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>