force-app/main/default/objects/deal_details_TV__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <description>ID</description>
    <label>Deal ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>