force-app/main/default/objects/deal_details_TV__c/fields/LCD_warrenty_nu_m__c.field-meta.xml
<CustomField>
    <fullName>LCD_warrenty_nu_m__c</fullName>
    <label>LCD warrenty num</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>