force-app/main/default/objects/deal_details_TV__c/fields/LED_vendor_num__c.field-meta.xml
<CustomField>
    <fullName>LED_vendor_num__c</fullName>
    <label>LED vendor num</label>
    <type>Phone</type>
</CustomField>