force-app/main/default/objects/deal_details_TV__c/fields/plasama_panal_code__c.field-meta.xml
<CustomField>
    <fullName>plasama_panal_code__c</fullName>
    <label>plasma panal code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>