force-app/main/default/objects/deal_details_TV__c/fields/product_type_TV__c.field-meta.xml
<CustomField>
    <fullName>product_type_TV__c</fullName>
    <description>LCD
LED
Plasma</description>
    <label>product type for TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LCD</fullName>
            </value>
            <value>
                <fullName>LED</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>