force-app/main/default/objects/deal_details_TV__c/recordTypes/LCD_record_type.recordType-meta.xml
<RecordType>
    <fullName>LCD_record_type</fullName>
    <active>true</active>
    <label>LCD record type</label>
</RecordType>