force-app/main/default/objects/deal_details_TV__c/recordTypes/LED_RT.recordType-meta.xml
<RecordType>
    <fullName>LED_RT</fullName>
    <active>true</active>
    <label>LED RT</label>
</RecordType>