force-app/main/default/objects/deal_details_TV__c/recordTypes/plasama_RT.recordType-meta.xml
<RecordType>
    <fullName>plasama_RT</fullName>
    <active>true</active>
    <label>plasama RT</label>
</RecordType>